Bug 926019 - focus and blur an input element should not trigger change event if content hasn't changed. r=smaug

--HG--
extra : rebase_source : 9d56196ae2597cc21f7366326ce7203fe16e6cfb